sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:15: error: reassignment to val
    fin=fin-1;  
       ^AlgCocktailSort2:22: error: reassignment to val
    deb = deb+1;
        ^